@@ -13,10 +13,11 @@ MY_CHECK_EXCEPTIONS
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h getopt.h slist.h hash_map.h glob.h regex.h)
+AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h getopt.h slist.h hash_map.h glob.h regex.h term.h)
 
 dnl Checks for libraries.
-	
+AC_CHECK_LIB(termcap, tputs)
+
 dnl check for liblockfile
 usez=yes
 AC_ARG_WITH(lockfile,
