@@ -1,5 +1,7 @@
 2001-09-xx - v0.15:
   * Fixes for gcc 3.0 compilation.
+  * Print time remaining in XhXXmXXs format, rather than XXXXs.
+  * Use termcap for clearing progress lines, fixes problems with chars getting left at the end.
 2001-08-02 - v0.14:
   * Fix exception if files in current dir contained '{' or '}'. (reported by Brian Keefer)
   * Remove autoconf AC_C_CONST, its only for C progs and breaks g++.
